Fixed local tasks tabs spacing on homepage

--- a/services/cms/src/themes/custom/unesco_oer_dc/css/components/_page-navigation.scss
+++ b/services/cms/src/themes/custom/unesco_oer_dc/css/components/_page-navigation.scss
@@ -36,7 +36,7 @@
 .c-page-navigation__local-tasks {
     margin-left: auto;
 
-    // .c-page-navigation__breadcrumb + & {
-    //     padding-top: 0;
-    // }
+    .c-page-navigation__breadcrumb--1 + & {
+        padding-top: size(2);
+    }
 }
